--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1692,67 +1692,67 @@
 "digicel_feature_cancel_TO" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
 "digicel_feature_cancel_VU" = "يمكنكم إدارة أو إلغاءعضوية lifebox من خلال تطبيق My Digicel.";
 "digicel_feature_cancel_PG" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
-"widget_rule_0_small_detail" = "";
-"widget_rule_0_small_button" = "";
-"widget_rule_0_medium_detail" = "";
-"widget_rule_0_medium_button" = "";
-"widget_rule_1_small_title" = "";
-"widget_rule_1_small_detail" = "";
-"widget_rule_1_small_button" = "";
-"widget_rule_1_medium_title" = "";
-"widget_rule_1_medium_detail" = "";
-"widget_rule_1_medium_button" = "";
-"widget_rule_2_small_title" = "";
-"widget_rule_2_small_detail" = "";
-"widget_rule_2_small_button" = "";
-"widget_rule_2_medium_title" = "";
-"widget_rule_2_medium_detail" = "";
-"widget_rule_2_medium_button" = "";
-"widget_rule_4_1_small_button" = "";
-"widget_rule_4_1_small_detail" = "";
-"widget_rule_4_1_medium_button" = "";
-"widget_rule_4_1_medium_detail" = "";
-"widget_rule_4_2_small_button" = "";
-"widget_rule_4_2_small_detail" = "";
-"widget_rule_4_2_medium_button" = "";
-"widget_rule_4_2_medium_detail" = "";
-"widget_rule_5_small_detail" = "";
-"widget_rule_5_small_button" = "";
-"widget_rule_5_medium_title" = "";
-"widget_rule_5_medium_detail" = "";
-"widget_rule_5_medium_button" = "";
-"widget_rule_6_small_detail" = "";
-"widget_rule_6_small_button" = "";
-"widget_rule_6_medium_detail" = "";
-"widget_rule_6_medium_button" = "";
-"widget_rule_7_1_small_title" = "";
-"widget_rule_7_1_small_detail" = "";
-"widget_rule_7_1_small_button" = "";
-"widget_rule_7_1_medium_title" = "";
-"widget_rule_7_1_medium_detail" = "";
-"widget_rule_7_1_medium_button" = "";
-"widget_rule_7_2_small_title" = "";
-"widget_rule_7_2_small_detail" = "";
-"widget_rule_7_2_small_button" = "";
-"widget_rule_7_2_medium_title" = "";
-"widget_rule_7_2_medium_detail" = "";
-"widget_rule_7_2_medium_button" = "";
-"widget_rule_7_3_small_detail" = "";
-"widget_rule_7_3_small_button" = "";
-"widget_rule_7_3_medium_detail" = "";
-"widget_rule_7_3_medium_button" = "";
-"widget_rule_7_4_small_detail" = "";
-"widget_rule_7_4_small_button" = "";
-"widget_rule_7_4_medium_detail" = "";
-"widget_rule_7_4_medium_button" = "";
-"billo_contactus_top_text" = "";
-"widget_rule_3_1_small_button" = "";
-"widget_rule_3_1_small_detail" = "";
-"widget_rule_3_1_medium_button" = "";
-"widget_rule_3_1_medium_detail" = "";
-"widget_rule_3_2_small_button" = "";
-"widget_rule_3_2_small_detail" = "";
-"widget_rule_3_2_medium_button" = "";
-"widget_rule_3_2_medium_detail" = "";
-"widget_display_name" = "";
-"widget_description" = "";
+"widget_rule_0_small_detail" = "يجب عليك تسجيل الدخول من أجل النسخ الاحتياطي الغير منقطع.";
+"widget_rule_0_small_button" = "قم بتسجيل الدخول";
+"widget_rule_0_medium_detail" = "قم بتسجيل الدخول من أجل الحصول على اخر المميزات بلايف بوكس LİFEBOX والنسخ الاحتياطي الغير منقطع.";
+"widget_rule_0_medium_button" = "قم بتسجيل الدخول";
+"widget_rule_1_small_title" = "حصة  نسبة لايف بوكسLİFEBOX %d%%.";
+"widget_rule_1_small_detail" = "حان الوقت للترقية للباقة الأعلى.";
+"widget_rule_1_small_button" = "افحص";
+"widget_rule_1_medium_title" = "حصة لايف بوكس LİFEBOX بنسبة %d%%.";
+"widget_rule_1_medium_detail" = "حان الوقت للاشتراك بالباقة الأعلى.";
+"widget_rule_1_medium_button" = "افحص الاشتراكات";
+"widget_rule_2_small_title" = "اوشكت ذاكرة جهازك على الامتلاء.";
+"widget_rule_2_small_detail" = "تحتاج إلى مساحة.";
+"widget_rule_2_small_button" = "افتح مكان";
+"widget_rule_2_medium_title" = "اوشكت ذاكرة جهازك على الامتلاء!";
+"widget_rule_2_medium_detail" = "تحتاج إلى مساحة من أجل ذكرياتك الجديدة.";
+"widget_rule_2_medium_button" = "افتح مكان";
+"widget_rule_4_1_small_button" = "انسخ احتياطيا";
+"widget_rule_4_1_small_detail" = "توجد ملفات عائدة إليك في انتظار النسخ الاحتياطي.";
+"widget_rule_4_1_medium_button" = "افتح النسخ الاحتياطي التلقائي";
+"widget_rule_4_1_medium_detail" = "توجد ملفات عائدة إليك في انتظار النسخ الاحتياطي.";
+"widget_rule_4_2_small_button" = "انسخ احتياطيا";
+"widget_rule_4_2_small_detail" = "توجد ملفات عائدة إليك في انتظار النسخ الاحتياطي.";
+"widget_rule_4_2_medium_button" = "ابدأ بالنسخ الاحتياطي";
+"widget_rule_4_2_medium_detail" = "توجد ملفات عائدة إليك في انتظار النسخ الاحتياطي.";
+"widget_rule_5_small_detail" = "ابدأ بالنسخ الاحتياطي لجهات الاتصال الخاصة بك بأمان.";
+"widget_rule_5_small_button" = "انسخ احتياطيا";
+"widget_rule_5_medium_title" = "لم تقم للتو بإجراء النسخ الاحتياطي لجهات الاتصال الخاصة بك.";
+"widget_rule_5_medium_detail" = "قم بالنسخ الاحتياطي بلايف بوكس LİFEBOX,واجعل جهات الاتصال الخاصة بك في أمان.";
+"widget_rule_5_medium_button" = "قم بالنسخ الاحتياطي لجهات الاتصال الخاصة بك ";
+"widget_rule_6_small_detail" = "لم تقم بالنسخ الاحتياطي لجهات الاتصال الخاصة بك منذ شهرا على الأقل.";
+"widget_rule_6_small_button" = "انسخ احتياطيا";
+"widget_rule_6_medium_detail" = "اجريت اخرنسخ احتياطي لجهات الاتصال الخاصة بك قبل شهرا.احضر إلى لايف بوكس سريعا,واجعل جهات الاتصال الخاصة بك تحت الحماية.";
+"widget_rule_6_medium_button" = "انسخ جهات اتصالك احتياطيا";
+"widget_rule_7_1_small_title" = "قد قمنا بتكوين ألبومات خاصة وفقا للوجوه التي في صوركم.";
+"widget_rule_7_1_small_detail" = "افحص وشارك!";
+"widget_rule_7_1_small_button" = "اعرض";
+"widget_rule_7_1_medium_title" = "قمنا بتجميع الذكريات العائدة إليكم وفقا لجهات الاتصال وقمنا بتكوين ألبومات خاصة.";
+"widget_rule_7_1_medium_detail" = "اكتشف الان وشاركها!";
+"widget_rule_7_1_medium_button" = "اكتشف الألبومات";
+"widget_rule_7_2_small_title" = "المزيد من الصور";
+"widget_rule_7_2_small_detail" = "يوفر تصنيفًا أكثر دقة للوجه.";
+"widget_rule_7_2_small_button" = "حمل الصورة";
+"widget_rule_7_2_medium_title" = "توفر المزيد من الصور تصنيفًا أكثر دقة للوجه.";
+"widget_rule_7_2_medium_detail" = "حمل الصورة";
+"widget_rule_7_2_medium_button" = "حمل";
+"widget_rule_7_3_small_detail" = "يمكنك تجميع الذكريات الخاصة بك بكل سهولة وفقا لجهات الاتصال.";
+"widget_rule_7_3_small_button" = "افتح التجميع";
+"widget_rule_7_3_medium_detail" = "ما رأيك في تصنيف ذكرياتك بكل سهولة حسب جهات الاتصال والأشياء؟";
+"widget_rule_7_3_medium_button" = "افتح تجميع الوجه&الأشياء";
+"widget_rule_7_4_small_detail" = "يمكنك تجميع الذكريات الخاصة بك بكل سهولة وفقا لجهات الأتصال.";
+"widget_rule_7_4_small_button" = "اكتشف";
+"widget_rule_7_4_medium_detail" = "ما رأيك في تصنيف ذكرياتك بكل سهولة حسب جهات الاتصال والأشياء؟";
+"widget_rule_7_4_medium_button" = "اكتشف";
+"billo_contactus_top_text" = "\"نشكركم لاختياركم لنا.سوف نشارك طلبكم مع فريق دعم ديجيسل Digicel.ديجيسل Digicelهي مشغل نعمل و متعاقدين معهم من أجل تطبيق Billo.سوف يتم القيام بتحليل مفصل لطلبك وسوف يتم مشاركة معلومات اتصالك ومعلومات استخدام Billo  و معلومات جهازك بالإضافة إلى بياناتك الشخصية التي قمت بتوضيحها بطلبكم إن وجدت مع ديجيسل Digicel.\"";
+"widget_rule_3_1_small_button" = "اعرض";
+"widget_rule_3_1_small_detail" = "يتم نسخ الملف %d/%dاحتياطيا...\n%@";
+"widget_rule_3_1_medium_button" = "عرض";
+"widget_rule_3_1_medium_detail" = "يتم نسخ الملف %d/%dاحتياطيا...\nما تم نسخه: %@";
+"widget_rule_3_2_small_button" = "اعرض";
+"widget_rule_3_2_small_detail" = "اكتمل النسخ الاحتياطي.";
+"widget_rule_3_2_medium_button" = "اعرض";
+"widget_rule_3_2_medium_detail" = "اكتمل النسخ الاحتياطي.";
+"widget_display_name" = "التخزين الشخصي";
+"widget_description" = "يمكنك الاحتفاظ بذكرياتك بهاتفك بأمان من خلال تلقي الإشعارات المتعلقة بذاكرة جهازك ومساحة تخزين لايف بوكسLİFEBOX.";
