--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -593,10 +593,10 @@
 "error_login" = "Necesita iniciar sesión en %@ para cargar archivos";
 "uploading" = "Cargando";
 "widgetBottomTitleLastSyncFormat" = "Última carga: %@";
-"widgetBottomTitleNewerSyncronized" = "Nunca ha comenzado la sincronización automática";
-"widgetTopTitleFinished" = "La sincronización ha finalizado";
-"widgetTopTitleInactive" = "La sincronización está inactiva";
-"widgetTopTitleInProgress" = "La sincronización está en progreso";
+"widgetBottomTitleNewerSyncronized" = "No has comenzado la sincronización automática";
+"widgetTopTitleFinished" = "La sincronización Automática ha finalizado";
+"widgetTopTitleInactive" = "La sincronización Automática está inactiva";
+"widgetTopTitleInProgress" = "La sincronización Automática está en progreso";
 "error_authentication_message" = "Abra la aplicación e inicie sesión para continuar";
 "error_authentication_title" = "Iniciar sesión en %@";
 "error_passcode_message" = "La aplicación de archivos no se puede usar con un código de acceso. Abra la aplicación y desactive la contraseña para continuar";
@@ -1722,43 +1722,43 @@
 "digicel_feature_cancel_TO" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
 "digicel_feature_cancel_VU" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
 "digicel_feature_cancel_PG" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
-"widget_rule_0_small_detail" = "";
-"widget_rule_0_small_button" = "";
-"widget_rule_0_medium_detail" = "";
-"widget_rule_0_medium_button" = "";
-"widget_rule_1_small_title" = "";
-"widget_rule_1_small_detail" = "";
-"widget_rule_1_small_button" = "";
-"widget_rule_1_medium_title" = "";
-"widget_rule_1_medium_detail" = "";
-"widget_rule_1_medium_button" = "";
-"widget_rule_2_small_title" = "";
-"widget_rule_2_small_detail" = "";
-"widget_rule_2_small_button" = "";
-"widget_rule_2_medium_title" = "";
-"widget_rule_2_medium_detail" = "";
-"widget_rule_2_medium_button" = "";
-"widget_rule_4_1_small_button" = "";
-"widget_rule_4_1_small_detail" = "";
-"widget_rule_4_1_medium_button" = "";
-"widget_rule_4_1_medium_detail" = "";
-"widget_rule_4_2_small_button" = "";
-"widget_rule_4_2_small_detail" = "";
-"widget_rule_4_2_medium_button" = "";
-"widget_rule_4_2_medium_detail" = "";
-"widget_rule_5_small_detail" = "";
-"widget_rule_5_small_button" = "";
-"widget_rule_5_medium_title" = "";
-"widget_rule_5_medium_detail" = "";
-"widget_rule_5_medium_button" = "";
-"widget_rule_6_small_detail" = "";
-"widget_rule_6_small_button" = "";
-"widget_rule_6_medium_detail" = "";
-"widget_rule_6_medium_button" = "";
-"widget_rule_7_1_small_title" = "";
-"widget_rule_7_1_small_detail" = "";
-"widget_rule_7_1_small_button" = "";
-"widget_rule_7_1_medium_title" = "";
+"widget_rule_0_small_detail" = "Quedate registrado para obtener lo mejor de lifebox";
+"widget_rule_0_small_button" = "Registrate";
+"widget_rule_0_medium_detail" = "Quedate registrado para obtener lo mejor de lifebox";
+"widget_rule_0_medium_button" = "Registrate";
+"widget_rule_1_small_title" = "Tu almacenamiento es casi %d%%";
+"widget_rule_1_small_detail" = "Es hora de mejorar tu plan";
+"widget_rule_1_small_button" = "Ver planes";
+"widget_rule_1_medium_title" = "Tu almacenamiento de lifebox está casi lleno";
+"widget_rule_1_medium_detail" = "Es hora de mejorar tu plan";
+"widget_rule_1_medium_button" = "Ver Planes";
+"widget_rule_2_small_title" = "Se terminó el almacenamiento del dispositivo %d%%";
+"widget_rule_2_small_detail" = "¡Necesitas más espacio!";
+"widget_rule_2_small_button" = "Libera espacio";
+"widget_rule_2_medium_title" = "¡Te estás quedando sin almacenamiento en el dispositivo!";
+"widget_rule_2_medium_detail" = "Necesitas espacio para nuevos recuerdos";
+"widget_rule_2_medium_button" = "Libera espacio";
+"widget_rule_4_1_small_button" = "Habilita la sincronización";
+"widget_rule_4_1_small_detail" = "Tienes archivos esperando ser sincronizados";
+"widget_rule_4_1_medium_button" = "Habilita Sincronización Automatica";
+"widget_rule_4_1_medium_detail" = "Tienes archivos esperando ser sincronizados";
+"widget_rule_4_2_small_button" = "Sincronizar";
+"widget_rule_4_2_small_detail" = "Tienes archivos esperando ser sincronizados";
+"widget_rule_4_2_medium_button" = "Sincroniza tus archivos";
+"widget_rule_4_2_medium_detail" = "Tienes archivos esperando ser sincronizados";
+"widget_rule_5_small_detail" = "Respalda y asegura tus contactos";
+"widget_rule_5_small_button" = "Respaldo";
+"widget_rule_5_medium_title" = "No has respaldado tus contactos";
+"widget_rule_5_medium_detail" = "Asegura tus contactos con lifebox";
+"widget_rule_5_medium_button" = "Respalda tus contactos";
+"widget_rule_6_small_detail" = "Ha pasado un 1 mes desde tu último respaldo de contactos";
+"widget_rule_6_small_button" = "Respaldo";
+"widget_rule_6_medium_detail" = "Ha pasado un 1 mes desde tu último respaldo de contactos";
+"widget_rule_6_medium_button" = "Respalda tus contactos";
+"widget_rule_7_1_small_title" = "¡Agrupa tus fotos y encontralas fácilmente! ";
+"widget_rule_7_1_small_detail" = "¡Observa y comparte!";
+"widget_rule_7_1_small_button" = "Ver";
+"widget_rule_7_1_medium_title" = "Recuerdos con tus seres queridos agrupados en álbumes especiales";
 "widget_rule_7_1_medium_detail" = "";
 "widget_rule_7_1_medium_button" = "";
 "widget_rule_7_2_small_title" = "";
