--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1680,67 +1680,67 @@
 "digicel_feature_cancel_TO" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
 "digicel_feature_cancel_VU" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
 "digicel_feature_cancel_PG" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
-"widget_rule_0_small_detail" = "";
-"widget_rule_0_small_button" = "";
-"widget_rule_0_medium_detail" = "";
-"widget_rule_0_medium_button" = "";
-"widget_rule_1_small_title" = "";
-"widget_rule_1_small_detail" = "";
-"widget_rule_1_small_button" = "";
-"widget_rule_1_medium_title" = "";
-"widget_rule_1_medium_detail" = "";
-"widget_rule_1_medium_button" = "";
-"widget_rule_2_small_title" = "";
-"widget_rule_2_small_detail" = "";
-"widget_rule_2_small_button" = "";
-"widget_rule_2_medium_title" = "";
-"widget_rule_2_medium_detail" = "";
-"widget_rule_2_medium_button" = "";
-"widget_rule_4_1_small_button" = "";
-"widget_rule_4_1_small_detail" = "";
-"widget_rule_4_1_medium_button" = "";
-"widget_rule_4_1_medium_detail" = "";
-"widget_rule_4_2_small_button" = "";
-"widget_rule_4_2_small_detail" = "";
-"widget_rule_4_2_medium_button" = "";
-"widget_rule_4_2_medium_detail" = "";
-"widget_rule_5_small_detail" = "";
-"widget_rule_5_small_button" = "";
-"widget_rule_5_medium_title" = "";
-"widget_rule_5_medium_detail" = "";
-"widget_rule_5_medium_button" = "";
-"widget_rule_6_small_detail" = "";
-"widget_rule_6_small_button" = "";
-"widget_rule_6_medium_detail" = "";
-"widget_rule_6_medium_button" = "";
-"widget_rule_7_1_small_title" = "";
-"widget_rule_7_1_small_detail" = "";
-"widget_rule_7_1_small_button" = "";
-"widget_rule_7_1_medium_title" = "";
-"widget_rule_7_1_medium_detail" = "";
-"widget_rule_7_1_medium_button" = "";
-"widget_rule_7_2_small_title" = "";
-"widget_rule_7_2_small_detail" = "";
-"widget_rule_7_2_small_button" = "";
-"widget_rule_7_2_medium_title" = "";
-"widget_rule_7_2_medium_detail" = "";
-"widget_rule_7_2_medium_button" = "";
-"widget_rule_7_3_small_detail" = "";
-"widget_rule_7_3_small_button" = "";
-"widget_rule_7_3_medium_detail" = "";
-"widget_rule_7_3_medium_button" = "";
-"widget_rule_7_4_small_detail" = "";
-"widget_rule_7_4_small_button" = "";
-"widget_rule_7_4_medium_detail" = "";
-"widget_rule_7_4_medium_button" = "";
-"billo_contactus_top_text" = "";
-"widget_rule_3_1_small_button" = "";
-"widget_rule_3_1_small_detail" = "";
-"widget_rule_3_1_medium_button" = "";
-"widget_rule_3_1_medium_detail" = "";
-"widget_rule_3_2_small_button" = "";
-"widget_rule_3_2_small_detail" = "";
-"widget_rule_3_2_medium_button" = "";
-"widget_rule_3_2_medium_detail" = "";
-"widget_display_name" = "";
-"widget_description" = "";
+"widget_rule_0_small_detail" = "Pentru un backup continuu trebuie să te autentifici.";
+"widget_rule_0_small_button" = "Autentifică-te";
+"widget_rule_0_medium_detail" = "Pentru un backup continuu şi cele mai recente funcții în legătură cu lifebox trebuie să te autentifici.";
+"widget_rule_0_medium_button" = "Autentifică-te";
+"widget_rule_1_small_title" = "Cota ta lifebox este peste %d%%.";
+"widget_rule_1_small_detail" = "Este timpul potrivit să treci la pachetul superior.";
+"widget_rule_1_small_button" = "Examinează";
+"widget_rule_1_medium_title" = "Cota ta lifebox este peste %d%%.";
+"widget_rule_1_medium_detail" = "Este timpul potrivit să treci la pachetul superior.";
+"widget_rule_1_medium_button" = "Examinează Abonamentele";
+"widget_rule_2_small_title" = "Memoria dispozitivului este aproape plină.";
+"widget_rule_2_small_detail" = "Ai nevoie de spațiu.";
+"widget_rule_2_small_button" = "Eliberează Spațiu";
+"widget_rule_2_medium_title" = "Memoria dispozitivului este aproape plină!";
+"widget_rule_2_medium_detail" = "Ai nevoie de spațiu pentru noi amintiri.";
+"widget_rule_2_medium_button" = "Eliberează Spațiu";
+"widget_rule_4_1_small_button" = "Fă backup";
+"widget_rule_4_1_small_detail" = "Ai fișiere care așteaptă să le fie făcut backup.";
+"widget_rule_4_1_medium_button" = "Activează backup-ul automat";
+"widget_rule_4_1_medium_detail" = "Ai fișiere care așteaptă să le fie făcut backup.";
+"widget_rule_4_2_small_button" = "Fă backup";
+"widget_rule_4_2_small_detail" = "Ai fișiere care așteaptă să le fie făcut backup.";
+"widget_rule_4_2_medium_button" = "Începe Backup-ul";
+"widget_rule_4_2_medium_detail" = "Ai fișiere care așteaptă să le fie făcut backup.";
+"widget_rule_5_small_detail" = "Începe să faci backup în siguranță agendei tale de contacte.";
+"widget_rule_5_small_button" = "Fă backup";
+"widget_rule_5_medium_title" = "Nu ai făcut încă backup agendei tale de contacte.";
+"widget_rule_5_medium_detail" = "Fă backup în lifebox, asigură-ţi agenda de contacte.";
+"widget_rule_5_medium_button" = "Fă backup Agendei tale de Contacte";
+"widget_rule_6_small_detail" = "Nu ai făcut backup agendei tale de contacte de cel puțin o lună.";
+"widget_rule_6_small_button" = "Fă backup";
+"widget_rule_6_medium_detail" = "Ai făcut ultima dată backup agendei tale de contacte acum 1 luna. Vin-o imediat în lifebox, asigură-ţi agenta de contacte.";
+"widget_rule_6_medium_button" = "Fă backup Agendei tale de Contacte";
+"widget_rule_7_1_small_title" = "Am creat albume speciale după din fotografiile tale.";
+"widget_rule_7_1_small_detail" = "Examinează şi partajează!";
+"widget_rule_7_1_small_button" = "Afișează";
+"widget_rule_7_1_medium_title" = "Am grupat amintirile în funcție de persoanele de contact și am creat albume speciale.";
+"widget_rule_7_1_medium_detail" = "Descoperă acum şi partajează!";
+"widget_rule_7_1_medium_button" = "Descoperă-ţi Albumele";
+"widget_rule_7_2_small_title" = "Mai multe fotografii ";
+"widget_rule_7_2_small_detail" = " oferă o grupare mai precisă a fețelor.";
+"widget_rule_7_2_small_button" = "Încarcă Fotografia";
+"widget_rule_7_2_medium_title" = "Mai multe fotografii oferă o grupare mai precisă a fețelor.";
+"widget_rule_7_2_medium_detail" = "Încarcă Fotografia";
+"widget_rule_7_2_medium_button" = "Încarcă";
+"widget_rule_7_3_small_detail" = "Iți poți  grupa cu ușurință amintirile după persoanele de contact.";
+"widget_rule_7_3_small_button" = "Deschide Gruparea";
+"widget_rule_7_3_medium_detail" = "Ce zici de clasificarea ușoară a amintirilor în funcție de persoanele de contact și obiecte?";
+"widget_rule_7_3_medium_button" = "Deschide Gruparea Feţe&Obiecte";
+"widget_rule_7_4_small_detail" = "Iți poți  grupa cu ușurință amintirile după persoanele de contact.";
+"widget_rule_7_4_small_button" = "Descoperă";
+"widget_rule_7_4_medium_detail" = "Ce zici de clasificarea ușoară a amintirilor în funcție de persoanele de contact și obiecte?";
+"widget_rule_7_4_medium_button" = "Descoperă";
+"billo_contactus_top_text" = "\"Îţi mulțumim că ne-ai ales. Vom partaja cererea ta cu echipa de asistență Digicel. Digicel este operatorul cu care colaborăm pentru aplicația Billo. Pentru a face o analiză detaliată a cererii tale  și pentru a oferi o soluție rapidă, pe lângă datele personale menționate în cerere, vor fi partajate  de asemenea cu Digicel şi informații despre dispozitiv, informații despre utilizarea Billo și informații de contact, dacă există.\"";
+"widget_rule_3_1_small_button" = "Afișează";
+"widget_rule_3_1_small_detail" = "Se face backup pentru% d /% d fișiere...\n%@";
+"widget_rule_3_1_medium_button" = "Afișează";
+"widget_rule_3_1_medium_detail" = "Se face backup pentru %d/%d fișiere...\nBackup făcut %@";
+"widget_rule_3_2_small_button" = "Afișează";
+"widget_rule_3_2_small_detail" = "Backup-ul a fost finalizat.";
+"widget_rule_3_2_medium_button" = "Afișează";
+"widget_rule_3_2_medium_detail" = "Backup-ul a fost finalizat.";
+"widget_display_name" = "Stocare Personală";
+"widget_description" = "Îți poţi păstra amintirile și telefonul în siguranță primind notificări despre memoria dispozitivului și spațiul de stocare al lifebox-ului.";
