--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1723,67 +1723,67 @@
 "digicel_feature_cancel_TO" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
 "digicel_feature_cancel_VU" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
 "digicel_feature_cancel_PG" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
-"widget_rule_0_small_detail" = "";
-"widget_rule_0_small_button" = "";
-"widget_rule_0_medium_detail" = "";
-"widget_rule_0_medium_button" = "";
-"widget_rule_1_small_title" = "";
-"widget_rule_1_small_detail" = "";
-"widget_rule_1_small_button" = "";
-"widget_rule_1_medium_title" = "";
-"widget_rule_1_medium_detail" = "";
-"widget_rule_1_medium_button" = "";
-"widget_rule_2_small_title" = "";
-"widget_rule_2_small_detail" = "";
-"widget_rule_2_small_button" = "";
-"widget_rule_2_medium_title" = "";
-"widget_rule_2_medium_detail" = "";
-"widget_rule_2_medium_button" = "";
-"widget_rule_4_1_small_button" = "";
-"widget_rule_4_1_small_detail" = "";
-"widget_rule_4_1_medium_button" = "";
-"widget_rule_4_1_medium_detail" = "";
-"widget_rule_4_2_small_button" = "";
-"widget_rule_4_2_small_detail" = "";
-"widget_rule_4_2_medium_button" = "";
-"widget_rule_4_2_medium_detail" = "";
-"widget_rule_5_small_detail" = "";
-"widget_rule_5_small_button" = "";
-"widget_rule_5_medium_title" = "";
-"widget_rule_5_medium_detail" = "";
-"widget_rule_5_medium_button" = "";
-"widget_rule_6_small_detail" = "";
-"widget_rule_6_small_button" = "";
-"widget_rule_6_medium_detail" = "";
-"widget_rule_6_medium_button" = "";
-"widget_rule_7_1_small_title" = "";
-"widget_rule_7_1_small_detail" = "";
-"widget_rule_7_1_small_button" = "";
-"widget_rule_7_1_medium_title" = "";
-"widget_rule_7_1_medium_detail" = "";
-"widget_rule_7_1_medium_button" = "";
-"widget_rule_7_2_small_title" = "";
-"widget_rule_7_2_small_detail" = "";
-"widget_rule_7_2_small_button" = "";
-"widget_rule_7_2_medium_title" = "";
-"widget_rule_7_2_medium_detail" = "";
-"widget_rule_7_2_medium_button" = "";
-"widget_rule_7_3_small_detail" = "";
-"widget_rule_7_3_small_button" = "";
-"widget_rule_7_3_medium_detail" = "";
-"widget_rule_7_3_medium_button" = "";
-"widget_rule_7_4_small_detail" = "";
-"widget_rule_7_4_small_button" = "";
-"widget_rule_7_4_medium_detail" = "";
-"widget_rule_7_4_medium_button" = "";
-"billo_contactus_top_text" = "";
-"widget_rule_3_1_small_button" = "";
-"widget_rule_3_1_small_detail" = "";
-"widget_rule_3_1_medium_button" = "";
-"widget_rule_3_1_medium_detail" = "";
-"widget_rule_3_2_small_button" = "";
-"widget_rule_3_2_small_detail" = "";
-"widget_rule_3_2_medium_button" = "";
-"widget_rule_3_2_medium_detail" = "";
-"widget_display_name" = "";
-"widget_description" = "";
+"widget_rule_0_small_detail" = "Duhet të bësh një hyrje  për rezervim të pandërprerë.";
+"widget_rule_0_small_button" = "Bëje një hyrje";
+"widget_rule_0_medium_detail" = "Bëje një hyrje për tiparet më të fundit në lidhje me rezervimin të pandërprerë.dhe lifebox-in";
+"widget_rule_0_medium_button" = "Bëje një hyrje";
+"widget_rule_1_small_title" = "Kuota jote lifebox është mbi %d%%.";
+"widget_rule_1_small_detail" = "Është koha e duhur  për të kaluar   në paketën  e lartë.";
+"widget_rule_1_small_button" = "Shqyrto";
+"widget_rule_1_medium_title" = "Kuota jote lifebox është mbi %d%%.";
+"widget_rule_1_medium_detail" = "Është koha e duhur për të kaluar në paketën e lartë.";
+"widget_rule_1_medium_button" = "Shqyrtoji Abonimet";
+"widget_rule_2_small_title" = "Kujtesa e pajisjes tënde është pothuajse e plotë.";
+"widget_rule_2_small_detail" = "Ke nevojë hapësirën.";
+"widget_rule_2_small_button" = "Hape Hapësirën";
+"widget_rule_2_medium_title" = "Kujtesa e pajisjes tënde është pothuajse e plotë!";
+"widget_rule_2_medium_detail" = "Ke nevojë hapësirën për kujtime të reja.";
+"widget_rule_2_medium_button" = "Hape Hapësirën";
+"widget_rule_4_1_small_button" = "Rezervo";
+"widget_rule_4_1_small_detail" = "Ekziston skedara jote që presin të rezervohen.";
+"widget_rule_4_1_medium_button" = "Aktivizoje Rezervimin Automatik";
+"widget_rule_4_1_medium_detail" = "Ekziston skedara jote që presin të rezervohen.";
+"widget_rule_4_2_small_button" = "Rezervo";
+"widget_rule_4_2_small_detail" = "Ekziston skedara jote  që presin të rezervohen.";
+"widget_rule_4_2_medium_button" = "Fillo Rezervimin";
+"widget_rule_4_2_medium_detail" = "Ekziston skedara jote që presin të rezervohen.";
+"widget_rule_5_small_detail" = "Fillo të rezervosh librin tënd teleonik në mënyrë të sigurt.";
+"widget_rule_5_small_button" = "Rezervo";
+"widget_rule_5_medium_title" = "Ende nuk e ke rezervuar librin tënd teleonik.";
+"widget_rule_5_medium_detail" = "Rezervoje atë në lifebox. Siguroje librin tënd teleonik.";
+"widget_rule_5_medium_button" = "Rezervoje Librin Tënd Teleonik";
+"widget_rule_6_small_detail" = "Nuk e ke rezervuar librin tënd  teleonik paktën 1 muaj.";
+"widget_rule_6_small_button" = "Rezervo";
+"widget_rule_6_medium_detail" = "Nuk e ke rezervuar librin tënd teleonik për herë të fundit 1 muaj më parë. Eja  në lifebox tani, Siguroje librin tënd teleonik .";
+"widget_rule_6_medium_button" = "Rezervoje Librin Tënd Teleonik";
+"widget_rule_7_1_small_title" = "Ne krijuam albume speciale bazuar në fytyrat  që janë në fotot  e tua.";
+"widget_rule_7_1_small_detail" = "Shqyrto dhe ndaje!";
+"widget_rule_7_1_small_button" = "Shfaqe";
+"widget_rule_7_1_medium_title" = "Ne i grupuam kujtimet e tua sipas  personave dhe krijuam albume të veçanta.";
+"widget_rule_7_1_medium_detail" = "Zbulo dhe ndaie tani!";
+"widget_rule_7_1_medium_button" = "Zbuloji Albumet";
+"widget_rule_7_2_small_title" = "Më shumë foto ";
+"widget_rule_7_2_small_detail" = " siguron grupimin më të saktë të fytyrës.";
+"widget_rule_7_2_small_button" = "Ngarko Foto";
+"widget_rule_7_2_medium_title" = "Siguron më shumë fotografi dhe një grupim më të saktë të fytyrës.";
+"widget_rule_7_2_medium_detail" = "Ngarko foto";
+"widget_rule_7_2_medium_button" = "Ngarko";
+"widget_rule_7_3_small_detail" = "Lehtësidht mund t'i gruposh  kujtimet e tua  sipas personit.";
+"widget_rule_7_3_small_button" = "Aktivizoje Grupimin";
+"widget_rule_7_3_medium_detail" = "Çfarë thua t’i kategorizosh me lehtësi kujtimet e tua sipas njerëzve dhe objekteve?";
+"widget_rule_7_3_medium_button" = "Aktivizoje Grupimin e Fytyrës&Objektit";
+"widget_rule_7_4_small_detail" = "Lehtësidht mund t'i gruposh  kujtimet e tua sipas personit.";
+"widget_rule_7_4_small_button" = "Zbulo";
+"widget_rule_7_4_medium_detail" = "Çfarë thua t’i kategorizosh me lehtësi kujtimet e tua sipas njerëzve dhe objekteve?";
+"widget_rule_7_4_medium_button" = "Zbulo";
+"billo_contactus_top_text" = "\"Faleminderit që na zgjodhët. Ne do ta ndajmë kërkesën tuaj me ekipin mbështetës Digicel. Digicel është operatori me të cilin ne punojmë për aplikacionin Billo. Ne do të bëjmë një analizë të hollësishme lidhur me kërkesën tënd dhe dhe për të jetë e mundur të sigurohet një zgjidhje të shpejtë, përveç të dhënave personale që ke specifikuar në kërkesën tënd, nëse ekzistojnë informacionet e tua e pajisjes informacionet e tua e përdorimit ‘’Billo’’ dhe informacionet e tua e komunikimit do të ndahen gjithashtu me Digicel.\"";
+"widget_rule_3_1_small_button" = "Shfaqe";
+"widget_rule_3_1_small_detail" = "Po rezervohet %d/%d skedarë ...\n%@";
+"widget_rule_3_1_medium_button" = "Shfaqe";
+"widget_rule_3_1_medium_detail" = "Po rezervohet %d/%d skedarë ...\nTë rezervuara: %@";
+"widget_rule_3_2_small_button" = "Shfaqe";
+"widget_rule_3_2_small_detail" = "Rezervimi është plotësuar.";
+"widget_rule_3_2_medium_button" = "Shfaqe";
+"widget_rule_3_2_medium_detail" = "Rezervimi është plotësuar.";
+"widget_display_name" = "Ruajtja Personale";
+"widget_description" = "Ti mund t'i mbash kujtimet e tua dhe telefonin tënd në mënyrë  të sigurt duke marrë njoftime në lidhje me kujtesën tënd të pajisjes dhe hapësirën tënd të ruajtjes  lifebox.";
