--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1680,67 +1680,67 @@
 "digicel_feature_cancel_TO" = "Sie können Ihr Digicel-Abonnement über die My Digicel-Anwendung oder den Kundendienst kündigen oder verwalten. “";
 "digicel_feature_cancel_VU" = "Sie können Ihr Lifebox-Abonnement über die My Digicel-App kündigen oder verwalten.";
 "digicel_feature_cancel_PG" = "Sie können Ihr Lifebox-Abonnement über die My Digicel-App kündigen oder verwalten.";
-"widget_rule_0_small_detail" = "";
-"widget_rule_0_small_button" = "";
-"widget_rule_0_medium_detail" = "";
-"widget_rule_0_medium_button" = "";
-"widget_rule_1_small_title" = "";
-"widget_rule_1_small_detail" = "";
-"widget_rule_1_small_button" = "";
-"widget_rule_1_medium_title" = "";
-"widget_rule_1_medium_detail" = "";
-"widget_rule_1_medium_button" = "";
-"widget_rule_2_small_title" = "";
-"widget_rule_2_small_detail" = "";
-"widget_rule_2_small_button" = "";
-"widget_rule_2_medium_title" = "";
-"widget_rule_2_medium_detail" = "";
-"widget_rule_2_medium_button" = "";
-"widget_rule_4_1_small_button" = "";
-"widget_rule_4_1_small_detail" = "";
-"widget_rule_4_1_medium_button" = "";
-"widget_rule_4_1_medium_detail" = "";
-"widget_rule_4_2_small_button" = "";
-"widget_rule_4_2_small_detail" = "";
-"widget_rule_4_2_medium_button" = "";
-"widget_rule_4_2_medium_detail" = "";
-"widget_rule_5_small_detail" = "";
-"widget_rule_5_small_button" = "";
-"widget_rule_5_medium_title" = "";
-"widget_rule_5_medium_detail" = "";
-"widget_rule_5_medium_button" = "";
-"widget_rule_6_small_detail" = "";
-"widget_rule_6_small_button" = "";
-"widget_rule_6_medium_detail" = "";
-"widget_rule_6_medium_button" = "";
-"widget_rule_7_1_small_title" = "";
-"widget_rule_7_1_small_detail" = "";
-"widget_rule_7_1_small_button" = "";
-"widget_rule_7_1_medium_title" = "";
-"widget_rule_7_1_medium_detail" = "";
-"widget_rule_7_1_medium_button" = "";
-"widget_rule_7_2_small_title" = "";
-"widget_rule_7_2_small_detail" = "";
-"widget_rule_7_2_small_button" = "";
-"widget_rule_7_2_medium_title" = "";
-"widget_rule_7_2_medium_detail" = "";
-"widget_rule_7_2_medium_button" = "";
-"widget_rule_7_3_small_detail" = "";
-"widget_rule_7_3_small_button" = "";
-"widget_rule_7_3_medium_detail" = "";
-"widget_rule_7_3_medium_button" = "";
-"widget_rule_7_4_small_detail" = "";
-"widget_rule_7_4_small_button" = "";
-"widget_rule_7_4_medium_detail" = "";
-"widget_rule_7_4_medium_button" = "";
-"billo_contactus_top_text" = "";
-"widget_rule_3_1_small_button" = "";
-"widget_rule_3_1_small_detail" = "";
-"widget_rule_3_1_medium_button" = "";
-"widget_rule_3_1_medium_detail" = "";
-"widget_rule_3_2_small_button" = "";
-"widget_rule_3_2_small_detail" = "";
-"widget_rule_3_2_medium_button" = "";
-"widget_rule_3_2_medium_detail" = "";
-"widget_display_name" = "";
-"widget_description" = "";
+"widget_rule_0_small_detail" = "Sie müssen für eine unterbrechungsfreie Backup eingeloggen.";
+"widget_rule_0_small_button" = "Einloggen";
+"widget_rule_0_medium_detail" = "Melden Sie sich an, um die neuesten Funktionen für Backup und Lifebox zu erhalten.";
+"widget_rule_0_medium_button" = "Einloggen";
+"widget_rule_1_small_title" = "Lifebox liegt über Quote %d%%.";
+"widget_rule_1_small_detail" = "Es ist Zeit für ein Upgrade auf das Top Pack.";
+"widget_rule_1_small_button" = "Untersuche";
+"widget_rule_1_medium_title" = "Lifebox liegt über Quote %d%%.";
+"widget_rule_1_medium_detail" = "Es ist Zeit, auf das nächste Paket zu aktualisieren.";
+"widget_rule_1_medium_button" = "Abonnements Anzeigen";
+"widget_rule_2_small_title" = "Ihr Gerätespeicher ist fast voll.";
+"widget_rule_2_small_detail" = "Du brauchst Platz.";
+"widget_rule_2_small_button" = "Platz Freigeben";
+"widget_rule_2_medium_title" = "Ihr Gerätespeicher ist fast voll!";
+"widget_rule_2_medium_detail" = "Sie brauchen Platz für neue Erinnerungen.";
+"widget_rule_2_medium_button" = "Platz Freigeben";
+"widget_rule_4_1_small_button" = "Backup";
+"widget_rule_4_1_small_detail" = "Es gibt Dateien, die darauf warten, gesichert zu werden.";
+"widget_rule_4_1_medium_button" = "Aktivieren Sie die automatische Backup";
+"widget_rule_4_1_medium_detail" = "Es gibt Dateien, die darauf warten, gesichert zu werden.";
+"widget_rule_4_2_small_button" = "Backup";
+"widget_rule_4_2_small_detail" = "Es gibt Dateien, die darauf warten, gesichert zu werden.";
+"widget_rule_4_2_medium_button" = "Backup Starten";
+"widget_rule_4_2_medium_detail" = "Es gibt Dateien, die darauf warten, gesichert zu werden.";
+"widget_rule_5_small_detail" = "Starten Sie das Backup Ihrer Kontakte zu sichern.";
+"widget_rule_5_small_button" = "Backup";
+"widget_rule_5_medium_title" = "Sie haben Ihre Kontakte noch nicht gesichert.";
+"widget_rule_5_medium_detail" = "Sichern Sie Ihre Kontakte in der Lifebox.";
+"widget_rule_5_medium_button" = "Sichern Sie Ihre Kontakte";
+"widget_rule_6_small_detail" = "Sie haben Ihre Kontakte seit mindestens 1 Monat nicht mehr gesichert.";
+"widget_rule_6_small_button" = "Backup";
+"widget_rule_6_medium_detail" = "Sie haben Ihre Kontakte zuletzt vor 1 Monat gesichert. Kommen Sie jetzt zur Lifebox und sichern Sie Ihre Kontakte.";
+"widget_rule_6_medium_button" = "Sichern Sie Ihre Kontakte";
+"widget_rule_7_1_small_title" = "Wir haben spezielle Alben basierend auf den Gesichtern in Ihren Fotos erstellt.";
+"widget_rule_7_1_small_detail" = "Überprüfen und teilen!";
+"widget_rule_7_1_small_button" = "Ansehen";
+"widget_rule_7_1_medium_title" = "Wir haben Erinnerungen nach Menschen gruppiert und spezielle Alben erstellt.";
+"widget_rule_7_1_medium_detail" = "Jetzt entdecken und teilen!";
+"widget_rule_7_1_medium_button" = "Entdecken Sie Alben";
+"widget_rule_7_2_small_title" = "Mehr Fotos ";
+"widget_rule_7_2_small_detail" = " bietet eine genauere Gesichtsgruppierung.";
+"widget_rule_7_2_small_button" = "Ein Foto laden";
+"widget_rule_7_2_medium_title" = "Mehr Fotos bieten eine genauere Gesichtsgruppierung.";
+"widget_rule_7_2_medium_detail" = "Ein Foto laden";
+"widget_rule_7_2_medium_button" = "Laden";
+"widget_rule_7_3_small_detail" = "Sie können Ihre Erinnerungen leicht nach Personen gruppieren.";
+"widget_rule_7_3_small_button" = "Gruppierung Öffnen";
+"widget_rule_7_3_medium_detail" = "Wie wäre es, wenn Sie Ihre Erinnerungen einfach nach Personen und Objekten kategorisieren?";
+"widget_rule_7_3_medium_button" = "Öffnen Sie die Gruppierung von Gesichtern&Objekten";
+"widget_rule_7_4_small_detail" = "Sie können Ihre Erinnerungen leicht nach Personen gruppieren.";
+"widget_rule_7_4_small_button" = "Entdecken";
+"widget_rule_7_4_medium_detail" = "Wie wäre es, wenn Sie Ihre Erinnerungen einfach nach Personen und Objekten kategorisieren?";
+"widget_rule_7_4_medium_button" = "Entdecken";
+"billo_contactus_top_text" = "\"Danke, daß du uns gewählt hast. Wir werden deine Anfrage an das Digicel-Support-Team weiterleiten. Digicel ist der Operator, mit dem wir für die Billo-Anwendung arbeiten. Um eine detaillierte Analyse deine Anfrage durchzuführen und eine schnelle Lösung bereitzustellen, werden die Geräteinformationen, Billo-Nutzungsinformationen und Kontaktinformationen zusätzlich zu den persönlichen Daten, die du in deiner Anfrage angegeben hast, an Digicel weitergegeben.\"";
+"widget_rule_3_1_small_button" = "Ansehen";
+"widget_rule_3_1_small_detail" = "%d%d Datei wird gesichert…\n%@";
+"widget_rule_3_1_medium_button" = "Ansehen";
+"widget_rule_3_1_medium_detail" = "%d%d Datei wird gesichert…\nGesichert: %@";
+"widget_rule_3_2_small_button" = "Ansehen";
+"widget_rule_3_2_small_detail" = "Die Sicherung ist abgeschlossen.";
+"widget_rule_3_2_medium_button" = "Ansehen";
+"widget_rule_3_2_medium_detail" = "Die Sicherung ist abgeschlossen.";
+"widget_display_name" = "Persönliche Aufbewahrung";
+"widget_description" = "Sie können Ihre Erinnerungen und Ihr Telefon schützen, indem Sie Benachrichtigungen über den Speicher Ihres Geräts und den Speicherplatz der Lifebox erhalten.";
