--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -1986,67 +1986,67 @@ Please check I have understood the intended command here*/
 "digicel_feature_cancel_TO" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
 "digicel_feature_cancel_VU" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
 "digicel_feature_cancel_PG" = "Annuler ou gérer votre offre lifebox dans My Digicel app";
-"widget_rule_0_small_detail" = "";
-"widget_rule_0_small_button" = "";
-"widget_rule_0_medium_detail" = "";
-"widget_rule_0_medium_button" = "";
-"widget_rule_1_small_title" = "";
-"widget_rule_1_small_detail" = "";
-"widget_rule_1_small_button" = "";
-"widget_rule_1_medium_title" = "";
-"widget_rule_1_medium_detail" = "";
-"widget_rule_1_medium_button" = "";
-"widget_rule_2_small_title" = "";
-"widget_rule_2_small_detail" = "";
-"widget_rule_2_small_button" = "";
-"widget_rule_2_medium_title" = "";
-"widget_rule_2_medium_detail" = "";
-"widget_rule_2_medium_button" = "";
-"widget_rule_4_1_small_button" = "";
-"widget_rule_4_1_small_detail" = "";
-"widget_rule_4_1_medium_button" = "";
-"widget_rule_4_1_medium_detail" = "";
-"widget_rule_4_2_small_button" = "";
-"widget_rule_4_2_small_detail" = "";
-"widget_rule_4_2_medium_button" = "";
-"widget_rule_4_2_medium_detail" = "";
-"widget_rule_5_small_detail" = "";
-"widget_rule_5_small_button" = "";
-"widget_rule_5_medium_title" = "";
-"widget_rule_5_medium_detail" = "";
-"widget_rule_5_medium_button" = "";
-"widget_rule_6_small_detail" = "";
-"widget_rule_6_small_button" = "";
-"widget_rule_6_medium_detail" = "";
-"widget_rule_6_medium_button" = "";
-"widget_rule_7_1_small_title" = "";
-"widget_rule_7_1_small_detail" = "";
-"widget_rule_7_1_small_button" = "";
-"widget_rule_7_1_medium_title" = "";
-"widget_rule_7_1_medium_detail" = "";
-"widget_rule_7_1_medium_button" = "";
-"widget_rule_7_2_small_title" = "";
-"widget_rule_7_2_small_detail" = "";
-"widget_rule_7_2_small_button" = "";
-"widget_rule_7_2_medium_title" = "";
-"widget_rule_7_2_medium_detail" = "";
-"widget_rule_7_2_medium_button" = "";
-"widget_rule_7_3_small_detail" = "";
-"widget_rule_7_3_small_button" = "";
-"widget_rule_7_3_medium_detail" = "";
-"widget_rule_7_3_medium_button" = "";
-"widget_rule_7_4_small_detail" = "";
-"widget_rule_7_4_small_button" = "";
-"widget_rule_7_4_medium_detail" = "";
-"widget_rule_7_4_medium_button" = "";
-"billo_contactus_top_text" = "";
-"widget_rule_3_1_small_button" = "";
-"widget_rule_3_1_small_detail" = "";
-"widget_rule_3_1_medium_button" = "";
-"widget_rule_3_1_medium_detail" = "";
-"widget_rule_3_2_small_button" = "";
-"widget_rule_3_2_small_detail" = "";
-"widget_rule_3_2_medium_button" = "";
-"widget_rule_3_2_medium_detail" = "";
-"widget_display_name" = "";
-"widget_description" = "";
+"widget_rule_0_small_detail" = "Vous devez être connecté pour une sauvegarde ininterrompue.";
+"widget_rule_0_small_button" = "Connectez-vous";
+"widget_rule_0_medium_detail" = "Connectez-vous pour accéder aux dernières fonctionnalités de sauvegarde et de lifebox.";
+"widget_rule_0_medium_button" = "Connectez-vous";
+"widget_rule_1_small_title" = "Votre quota de lifebox est plus de %d%%.";
+"widget_rule_1_small_detail" = "Il est temps de passer au top pack.";
+"widget_rule_1_small_button" = "Examinez";
+"widget_rule_1_medium_title" = "Votre quota de lifebox est plus de  %d%%.";
+"widget_rule_1_medium_detail" = "Il est temps de passer au top pack suivant.";
+"widget_rule_1_medium_button" = "Affichez les Abonnements";
+"widget_rule_2_small_title" = "La mémoire de votre appareil est presque pleine.";
+"widget_rule_2_small_detail" = "Vous avez besoin d'espace.";
+"widget_rule_2_small_button" = "Faire de la place";
+"widget_rule_2_medium_title" = "La mémoire de votre appareil est presque pleine!";
+"widget_rule_2_medium_detail" = "Vous avez besoin d'espace pour de nouveaux souvenirs.";
+"widget_rule_2_medium_button" = "Faire de la place";
+"widget_rule_4_1_small_button" = "Sauvegardez";
+"widget_rule_4_1_small_detail" = "Il y a des fichiers en attente de sauvegarde.";
+"widget_rule_4_1_medium_button" = "Activez la Sauvegarde Automatique";
+"widget_rule_4_1_medium_detail" = "Il y a des fichiers en attente de sauvegarde.";
+"widget_rule_4_2_small_button" = "Sauvegardez";
+"widget_rule_4_2_small_detail" = "Il y a des fichiers en attente de sauvegarde.";
+"widget_rule_4_2_medium_button" = "Commencez la Sauvegarde";
+"widget_rule_4_2_medium_detail" = "Il y a des fichiers en attente de sauvegarde.";
+"widget_rule_5_small_detail" = "Commencez à sauvegarder vos contacts en toute sécurité.";
+"widget_rule_5_small_button" = "Sauvegardez";
+"widget_rule_5_medium_title" = "Vous n'avez pas encore sauvegardé vos contacts.";
+"widget_rule_5_medium_detail" = "Sauvegardez sur lifebox, sécurisez vos contacts.";
+"widget_rule_5_medium_button" = "Sauvegardez vos Contacts";
+"widget_rule_6_small_detail" = "Vous n'avez pas sauvegardé vos contacts depuis au moins 1 mois.";
+"widget_rule_6_small_button" = "Sauvegardez";
+"widget_rule_6_medium_detail" = "Vous avez sauvegardé vos contacts pour la dernière fois il y a 1 mois. Accédez à lifebox dès maintenant, sécurisez votre contacts.";
+"widget_rule_6_medium_button" = "Sauvegardez vos Contacts";
+"widget_rule_7_1_small_title" = "Nous avons créé des albums spéciaux basés sur les visages de vos photos.";
+"widget_rule_7_1_small_detail" = "Révisez et partagez!";
+"widget_rule_7_1_small_button" = "Vue";
+"widget_rule_7_1_medium_title" = "Nous avons regroupé ses souvenirs en fonction des personnes et créé des albums spéciaux.";
+"widget_rule_7_1_medium_detail" = "Découvrez et partagez maintenant!";
+"widget_rule_7_1_medium_button" = "Découvrez les Albums";
+"widget_rule_7_2_small_title" = "Plus de photos ";
+"widget_rule_7_2_small_detail" = " Il fournit un regroupement des visages plus précis.";
+"widget_rule_7_2_small_button" = "Télécharger les Photos";
+"widget_rule_7_2_medium_title" = "Plus de photos offrent un regroupement plus précis des visages.";
+"widget_rule_7_2_medium_detail" = "Téléchargez le photos";
+"widget_rule_7_2_medium_button" = "Téléchargez";
+"widget_rule_7_3_small_detail" = "Vous pouvez facilement regrouper vos souvenirs par personne.";
+"widget_rule_7_3_small_button" = "Ouvrez le Regroupement";
+"widget_rule_7_3_medium_detail" = "Que diriez-vous de classer facilement vos souvenirs en fonction des personnes et des objets?";
+"widget_rule_7_3_medium_button" = "Ouvrez le regroupement Visage&objet";
+"widget_rule_7_4_small_detail" = "Vous pouvez facilement regrouper vos souvenirs par personne.";
+"widget_rule_7_4_small_button" = "Découvriez";
+"widget_rule_7_4_medium_detail" = "Que diriez-vous de classer facilement vos souvenirs en fonction des personnes et des objets?";
+"widget_rule_7_4_medium_button" = "Découvriez";
+"billo_contactus_top_text" = "\"Merci de nous avoir choisis. Nous partagerons votre demande avec l'équipe d'assistance Digicel. Digicel est l'opérateur avec lequel nous avons conclu un contrat pour l'application Billo. Afin de faire une analyse détaillée de votre demande et de fournir une solution rapide, le cas échéant, en plus des données personnelles que vous avez spécifiées dans votre demande, les informations sur l'appareil, les informations d'utilisation de Billo et les coordonnées seront également partagées avec Digicel.\"";
+"widget_rule_3_1_small_button" = "Vue";
+"widget_rule_3_1_small_detail" = "Il est sauvegarde de fichiers %d/%d...\n%@";
+"widget_rule_3_1_medium_button" = "Vue";
+"widget_rule_3_1_medium_detail" = "Il est sauvegarde de fichiers %d/%d...\nSauvegardé: %@";
+"widget_rule_3_2_small_button" = "Vue";
+"widget_rule_3_2_small_detail" = "La sauvegarde est terminée.";
+"widget_rule_3_2_medium_button" = "Vue";
+"widget_rule_3_2_medium_detail" = "La sauvegarde est terminée.";
+"widget_display_name" = "Stockage Personnel";
+"widget_description" = "Vous pouvez protéger vos souvenirs et votre téléphone en recevant des notifications concernant la mémoire de votre appareil et l'espace de stockage de la lifebox.";
